# llvm-practice

./: .gitignore  .gitmodules  README.md
graphics_app/: CMakeLists.txt  Makefile  README.md  gameoflife.c  main.c
graphics_app/gameoflife_gtk4/: README.md
graphics_app/gameoflife_gtk4/sgl/: sgl.c  sgl_rand.h
graphics_app/gameoflife_ir_gen/: Makefile  gameoflife_ir_gen.cpp  llvm_ir_gen_macros.h
graphics_app/gameoflife_sdl/: README.md
graphics_app/gameoflife_sdl/sgl/: sgl.c  sgl.h  sgl.hpp  sgl_minimal.h  sgl_minimal.hpp
graphics_app/gameoflife_trace/: Makefile
graphics_app/gameoflife_trace/llvm_pass_logger/: Makefile  log.c
graphics_app/gameoflife_trace/trace_analyses/: gen_plots.py
graphics_app/gtk4/: CMakeLists.txt
graphics_app/gtk4/src/: gameoflife.ll
graphics_app/llvm_pass_logger/: Makefile  pass_logger.cpp
graphics_app/sdl/: CMakeLists.txt
graphics_app/sdl/sgl/: sgl.c  sgl.h
graphics_app/sdl/src/: gameoflife.c  gameoflife.ll  main.c
graphics_app/sgl/: sgl.c  sgl.h
graphics_app/src/: gameoflife.c
graphics_app/trace_analyses/: gen_plots.py
graphics_asm/: CMakeLists.txt  main.cpp
graphics_asm/CPU/: CMakeLists.txt  CPU.cpp  CPU.h  instruction.h  instruction_exec.cpp  instruction_exec.h  instruction_id.h
graphics_asm/examples/: gameoflife.gr
graphics_asm/executor/: CMakeLists.txt  executor.cpp  executor.h
graphics_asm/lexer/: CMakeLists.txt  lexer.h
graphics_asm/parser/: CMakeLists.txt  parser.h
graphics_asm/sgl/: sgl.cpp
graphics_asm2ir/CPU/: CMakeLists.txt  CPU.cpp  CPU.h  instruction.h  instruction_id.h
graphics_asm2ir/common/: config.h  macros.h
graphics_asm2ir/examples/: exit.gr  gameoflife.gr
graphics_asm2ir/executor/: executor.cpp
graphics_asm2ir/lexer/: CMakeLists.txt
graphics_asm2ir/sgl/: CMakeLists.txt  sgl.h
graphics_lang2ir/: CMakeLists.txt  README.md  main.cpp
graphics_lang2ir/ast/: ast.h
graphics_lang2ir/common/: config.h  macros.h
graphics_lang2ir/examples/: gameoflife.g  var.g
graphics_lang2ir/examples/base/: array.g  cmp.g  expr1.g  expr2.g  func.g  if.g  var.g
graphics_lang2ir/grammar/: CMakeLists.txt  grammar.y  lexer.lex
graphics_lang2ir/grammar/driver/: driver.h
graphics_lang2ir/llvmgen/: CMakeLists.txt  ast.h  context.h
graphics_lang2ir/llvmgen/ast/: ast.h  astdefs.h  base.h  binop.cpp  binop.h  control_flow.cpp  control_flow.h  declarations.h  func.cpp  func.h  io.cpp  io.h  stdlib.h  vars.h
graphics_lang2ir/scripts/: ld.sh
graphics_lang2ir/stdlib/: CMakeLists.txt  io.cpp  sgl.cpp  stdlib.h
